Use plural name ('orders') for listing API
